<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">My Application</string>
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="action_filter">Filter</string>
  <string name="action_search">Search…</string>

  <string name="appbar_scrolling_view_behavior" translatable="false" tools:override="true">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
  <string name="action_cast">Cast</string>
  <string name="nav_home">Home</string>
  <string name="nav_profile">Profile</string>
  <string name="nav_notifications">Notifications</string>
  <string name="nav_account">Account</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_about">About</string>
  <string name="drawer_open_content_description">Open</string>
  <string name="drawer_closed_content_description">Closed</string>
</resources>
