<?xml version="1.0" encoding="utf-8"?>

<!-- Listing 13-20: Defining a Menu for a Navigation View -->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/nav_home"
      android:title="@string/nav_home"
      android:checked="true" />
    <item
      android:id="@+id/nav_account"
      android:icon="@drawable/nav_account"
      android:title="@string/nav_account" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/nav_settings"
      android:title="@string/nav_settings" />
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/nav_about"
      android:title="@string/nav_about" />
  </group>
</menu>